--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ google_analytics_id: # set tracking, UA-XXXX-Y.
 links:
   - name:         关于
     url:          /about
+  - name:         Flickr
+    url:          https://www.flickr.com/photos/r2do/
+    external:     true
   - name:         Feed
     url:          /feed.xml
   - name:         Project
