--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,10 @@ disqus_shortname: YellowDi
 google_analytics_id: # set tracking, UA-XXXX-Y.
 
 links:
-  - name:         关于
+  - name:         About
     url:          /about
-  - name:         Flickr
-    url:          https://www.flickr.com/photos/r2do/
-    external:     true
   - name:         Feed
     url:          /feed.xml
-  - name:         Project
-    url:          http://simcity.pro
-    external:     true
   - name:         Twitter
     url:          http://twitter.com/YellowDi
     external:     true
