Changed pygments to highlighter in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ links:
   - name:         GitHub
     url:          http://github.com/YellowDi
     external:     true
-
+highlighter:      pygments
 pygments:         true
 permalink:        pretty
 markdown:         redcarpet
